--- a/Project.toml
+++ b/Project.toml
@@ -1,26 +1,28 @@
 name = "FirstOrderSolvers"
 uuid = "e2860157-3336-52d5-8ddc-1def50726c76"
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
+Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathProgBase = "fdba3010-5040-5b88-9595-932c9decdf73"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProximalOperators = "a725b495-10eb-56fe-b38b-717eba820537"
+QPDAS = "297e508c-b2a7-11e8-1524-5dccae6124f6"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 ValueHistories = "98cad3c8-aec3-5f06-8e41-884608649ab7"
-QPDAS = "297e508c-b2a7-11e8-1524-5dccae6124f6"
 
 [compat]
+Convex = "0.12"
 julia = "1.0"
 
 [extras]
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Convex", "SCS", "LinearAlgebra", "SparseArrays", "Random", "Test"]
